fix overflow

--- a/src/App/App.css
+++ b/src/App/App.css
@@ -42,7 +42,7 @@ html {
 
   bottom: 100%;
   left: 50%;
-  margin-left: -60px; /* Use half of the width (120/2 = 60), to center the tooltip */
+  margin-left: -120px;
 }
 
 /* Show the tooltip text when you mouse over the tooltip container */
